# ai

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  ARCHITECTURE.md  Dockerfile  FINAL_TRAINING_DATA_SUMMARY.md  NGC_CLI_INTEGRATION_SUMMARY.md  README.md  S3_AUDIT_REPORT.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  SECURITY_REMEDIATION_PLAN.md  TRAINING_DATA_READY.md  VALIDATION_INTEGRATION_GUIDE.md  YouTube_Transcription_Pipeline.ipynb  __init__.py  bitbucket-pipelines.yml  compass.yml  compress_therapeutic_ai_training_package_20251028_204104.sh  create_training_package.py  fix_double_imports.py  fix_huggingface_auth.py  fix_imports.py  fix_onnx_export.py  fix_paths.py  fix_training_issues.py  grafana_dashboard.yaml  hf_client.py  main.py  nemo-data-designer-k8s.yaml  pre_launch_validation.db  prometheus_config.yaml  pyproject.toml  sonar-project.properties  test_commit_process.txt  (+2 more)
archive/legacy-models/Kurtis-E1-MLX-Voice-Agent/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
archive/legacy-models/Kurtis-E1-MLX-Voice-Agent/kurtis_mlx/: config.py  handlers.py
lightning/: .gitignore  .gitmodules  .netrc  COMPLETE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_OPTIMIZATION_GUIDE.md  MODEL_ARCHITECTURE_PERFORMANCE.md  MOE_TRAINING_GUIDE.md  PROGRESS_TRACKING_GUIDE.md  QUICK_START.md  TASK_10_5_SUMMARY.md  TASK_11_SUMMARY.md  TASK_8_5_SUMMARY.md  TRAINING_OPTIMIZATION_GUIDE.md  TRAINING_PROCEDURES.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  VERIFICATION_RESULTS.md  assistant.py  check_config.sh  dataset_preprocessing.py  deployment_readiness_report.json  inference_service.py  progress_tracking_api.py  pyproject.toml  test_verification.py  train.py  train_moe_h100.py  web_assistant.py
lightning/h100_deployment/: LIGHTNING_DEPLOYMENT_INSTRUCTIONS.md  deployment_summary.json
lightning/pixelated-training/: Dockerfile.production  ENHANCED_DATASET_SUMMARY.md  LIGHTNING_AI_GUIDE.md  MANIFEST.json  README.md  YouTube_Transcription_Colab.ipynb  api_server.py  consolidate_datasets.py  create_training_ready_dataset.py  debug_dataset.py  deploy.sh  docker-compose.production.yml  docker-compose.yml  download_direct.py  download_gdrive.py  download_priority.py  dry_run_test.py  enhanced_dataset_pipeline.py  enhancement_report.json  export_gguf.py  final_enhanced_pipeline.py  final_enhancement_report.json  focused_enhanced_pipeline.py  inference.py  memory_efficient_pipeline.py  model_card.md  monitoring_config.json  nginx.conf  post_training_pipeline.py  process_all_videos.py  process_playlist.py  pyproject.toml  redis.conf  resume_download.py  run_aggressive.sh  run_qlora.sh  run_training.sh  sample_enhanced_dataset.py  setup.sh  sweep_config.json  (+10 more)
lightning/pixelated-training/autoscaler/: Dockerfile  autoscaler.py  config.yml
lightning/pixelated-training/moe_training/: README.md  config.py  data_loader.py  expert_trainer.py  lightning_train.py  requirements.txt  setup_lightning.sh
lightning/pixelated-training/moe_training_data/: empathetic_medium_quality.json  practical_medium_quality.json  therapeutic_medium_quality.json
lightning/pixelated-training/monitoring/: prometheus.yml
lightning/pixelated-training/processed/filtered_datasets/: additional_specialized_filtered.json  cot_reasoning_filtered.json  priority_1_filtered.json  priority_2_filtered.json  priority_3_filtered.json  professional_neuro_filtered.json  professional_psychology_filtered.json  professional_soulchat_filtered.json  reddit_mental_health_filtered.json  research_datasets_filtered.json
lightning/pixelated-training/processed/natural_conversations/: natural_multi_turn_conversations.json
lightning/pixelated-training/voice_extraction/: integrate_voice.py  moe_trainer.py  style_analyzer.py
lightning/pixelated-training/wayfarer-balanced/checkpoint-100/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
lightning/pixelated-training/wayfarer-balanced/checkpoint-150/: rng_state.pth  scheduler.pt  trainer_state.json
lightning/pixelated-training/wayfarer-balanced/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
lightning/pixelated-training/wayfarer-balanced/checkpoint-250/: rng_state.pth  scheduler.pt  special_tokens_map.json  trainer_state.json
lightning/pixelated-training/wayfarer-balanced/checkpoint-300/: rng_state.pth  scheduler.pt  trainer_state.json
lightning/pixelated-training/wayfarer-balanced/checkpoint-350/: README.md  rng_state.pth  scheduler.pt  tokenizer_config.json  (+1 more)
lightning/pixelated-v2/: .gitignore  BLUEPRINT.md  README.md  pyproject.toml  run_enhanced_analysis.py
lightning/pixelated-v2/config/: development.yaml
lightning/pixelated-v2/scripts/: setup_database.py
lightning/processed_data/: bias_report.json  data_lineage.json  deduplication_report.json  final_quality_report.json  fusion_report.json  ingestion_report.json  merged_deduplication_report.json  merged_validation_report.json  standardization_report.json  validation_report.json
lightning/processed_data/exports/: MANIFEST.json  comprehensive_final_report.json  data_dictionary.json
lightning/production/: lightning_deployment_config.json
lightning/production/deployment_package/: DEPLOYMENT_GUIDE.md  package_manifest.json  prepare_data.py  requirements.txt  train_therapeutic_ai.py
pipelines/voice/: Dockerfile  THEME.md  __init__.py  audio_quality_control.py  batch_transcribe.py  batch_transcribe_voice.py  convert_to_dialogue_format.py  dialogue_pair_validation.py  docker-compose.prod.yml  docker-compose.yml  feature_extraction.py  filter_transcription_quality.py  generate_therapeutic_pairs.py  personality_emotion_clustering.py  pipeline_reporting.py  pyproject.toml  requirements_api.txt  voice_data_filtering.py
pipelines/voice/api/: __init__.py  auth.py  models.py  utils.py
pipelines/voice/examples/: api_client_example.py
pipelines/voice/k8s/: api-deployment.yaml  namespace.yaml  postgres.yaml  redis.yaml
pipelines/voice/monitoring/: prometheus.yml
pipelines/voice/web/: dashboard.py
(+3664 files in other folders)
