[project]
name = "pixelated-ai"
version = "0.0.1"
description = "Pixelated Empathy AI - Production Quality Monitoring System"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "jinja2>=3.1.6",
    "python-dateutil>=2.8.0",
    "transformers>=4.42.0",
    "datasets>=2.19.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0; platform_system == 'Linux'",
    "peft>=0.11.0",
    "trl>=0.9.6",
    "sentencepiece>=0.1.99",
    "einops>=0.7.0",
    "pydantic>=2.11.7",
    "openai-whisper>=20250625",
    "faster-whisper>=1.2.0",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "python-magic>=0.4.27",
    "redis>=6.4.0",
    "requests>=2.32.3",
    "ruff>=0.12.11",
    "black>=25.1.0",
    "nbqa>=1.7.0",
    "pandas>0.25.0",
    "pytest>=7.4.1",
    "numpy>1.24.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "packaging>=25.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "huggingface-hub[cli]>=0.34.4",
    # CLI dependencies
    "click>=8.1.0",
    "pyyaml>=6.0",
    "cryptography>=44.0.0",
    "pyjwt>=2.9.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.28.1",
    "websockets>=11.0",
    "aiofiles>=23.0.0",
    "openai>=2.6.0",
    # Embedding Agent API dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "onnxruntime-gpu>=1.18.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["."], include = ["monitoring*"]}

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
# Exclude Jupyter notebooks from direct linting
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# Add any lint rules you want here
select = ["E", "F", "I"]
ignore = []
