[project]
name = "pixelated-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "accelerate>=0.24.0", "bitsandbytes>=0.47.0", "datasets>=2.14.0", "deepspeed>=0.12.0", "fastapi>=0.104.0", "gdown>=5.2.0", "gputil>=1.4.0", "gradio>=5.47.2", "huggingface-hub>=0.19.0", "lightning>=2.5.5", "llama-cpp-python>=0.2.0", "numpy>=1.24.0", "openai-whisper>=20231117", "peft>=0.17.1", "psutil>=5.9.0", "pydantic>=2.4.0", "requests>=2.31.0", "tensorboard>=2.14.0", "toml>=0.10.2", "torch>=2.0.0", "torchvision>=0.23.0", "tqdm>=4.65.0", "transformers>=4.35.0", "uvicorn>=0.24.0", "wandb>=0.16.0", "yt-dlp>=2025.9.26", "scikit-learn>=1.3.0", "nltk>=3.8", "textstat>=0.7.0", "pyphen>=0.14.0",]
