[project]
name = "pixelated-empathy"
version = "0.1.0"
description = "Therapeutic AI with Tim Fletcher communication style"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.17.1",
    "accelerate>=0.24.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "tqdm>=4.65.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "prometheus-client>=0.17.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
